# git-tree-project-structure-to-yaml

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .windsurfrules  MODERNIZATION_CHECKPOINT.md  README.md  _typos.toml  biome.json  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-analyzer.md  dependency-mapper.md  documentation-generator.md  technical-debt-assessor.md  test-coverage-improver.md
.claude/commands/: modernize.md
.claude/hooks/: session-start.sh  validate-checkpoint.sh
.claude/scripts/: init-checkpoint.sh  update-checkpoint.sh
.claude/skills/brownfield-modernization/: CHECKPOINT_SCHEMA.md  PHASES.md  SKILL.md
.github/workflows/: build.yaml  check.yaml  release.yaml  test.yaml
docs/: AI_ASSISTED_BROWNFIELD_MODERNIZATION_CHECKLIST.md
docs/architecture/: current-state.md  dependency-graph.md
docs/dependencies/: inventory.md  upgrade-plan.md
docs/technical-debt/: inventory.md  prioritized-backlog.md
scripts/: version
src/git_tree_project_structure_to_yaml/: __init__.py  _cli.py  formatters.py  tree.py  types.py  utils.py  validators.py
tests/: structure.yaml
tests/cli/: test_yaml_tree.py
